@@ -17,6 +17,7 @@ thkp
 tinv
 tkey
 tmacro
+tmagic
 tput
 tring
 trpmio
